New fields in database, new validations in service and in request, test cases full coverage. Still having trouble deleting "service.db" from directory on unit test ending.
