# internal/api/v1/dto/create_thing.go
@@ -1,13 +1,18 @@
 package dto
 
+import "time"
+
 // CreateThing represents the parameters for Swagger documentation
 //
 // swagger:parameters createThing
 type CreateThing struct {
 	// in:body
 	Body struct {
-		ID   uint   `json:"id"`
-		Name string `json:"name"`
+		Name       string `json:"name" validate:"required"`
+		Email      string `json:"email" validate:"email"`
+		Phone      string `json:"phone" validate:"e164"`
+		Birth_date string `json:"birth_date" validate:"required"`
+		Start_day  int    `json:"start_day" validate:"required,numeric"`
 	}
 }
 
@@ -17,7 +22,11 @@ type CreateThing struct {
 type CreateThingRS struct {
 	// in:body
 	Body struct {
-		ID   uint   `json:"id"`
-		Name string `json:"name"`
+		ID         uint      `json:"id"`
+		Name       string    `json:"name"`
+		Email      string    `json:"email"`
+		Phone      string    `json:"phone"`
+		Birth_date time.Time `json:"birth_date"`
+		Start_day  int       `json:"start_day"`
 	}
 }
