# internal/api/v1/things.go
@@ -4,6 +4,7 @@ import (
 	"errors"
 	"net/http"
 	"strconv"
+	"time"
 
 	"github.com/danic95/things-service/internal/api/v1/dto"
 	"github.com/danic95/things-service/internal/things/entity"
@@ -12,6 +13,8 @@ import (
 	"github.com/sanservices/apilogger/v2"
 )
 
+var ErrDataValidation error = errors.New("invalid data in thing body")
+
 func (h *Handler) getThings(c echo.Context) error {
 	/*queryThingID := c.Param("id")
 	thingID, err := strconv.Atoi(queryThingID)
@@ -19,12 +22,13 @@ func (h *Handler) getThings(c echo.Context) error {
 		return helper.RespondError(c, http.StatusBadRequest, errors.New("id query param must be unsigned integer"))
 	}*/
 
-	thing, err := h.service.GetThings(c.Request().Context())
+	things, err := h.service.GetThings(c.Request().Context())
 
 	if err != nil {
-		return helper.RespondError(c, http.StatusInternalServerError, errors.New("something went wrong"))
+		return helper.RespondError(c, http.StatusInternalServerError,
+			errors.New("something went wrong while requesting the things"))
 	}
-	return helper.RespondOk(c, thing)
+	return helper.RespondOk(c, things)
 }
 
 func (h *Handler) getThing(c echo.Context) error {
@@ -36,13 +40,10 @@ func (h *Handler) getThing(c echo.Context) error {
 
 	err = nil
 	var thing interface{}
-	if queryThingID == "" {
-		thing, err = h.service.GetThings(c.Request().Context())
-	} else {
-		thing, err = h.service.GetThing(c.Request().Context(), uint(thingID))
-	}
+	thing, err = h.service.GetThing(c.Request().Context(), uint(thingID))
 	if err != nil {
-		return helper.RespondError(c, http.StatusInternalServerError, errors.New("something went wrong"))
+		return helper.RespondError(c, http.StatusInternalServerError,
+			errors.New("something went wrong while requesting the thing"))
 	}
 	return helper.RespondOk(c, thing)
 }
@@ -50,20 +51,36 @@ func (h *Handler) getThing(c echo.Context) error {
 func (h *Handler) createThing(c echo.Context) error {
 	ctx := c.Request().Context()
 	params := dto.CreateThing{}
-	err := helper.DecodeBody(c, &params.Body)
 
+	// Decoding the request
+	err := helper.DecodeBody(c, &params.Body)
 	if err != nil {
 		apilogger.Error(ctx, apilogger.LogCatTypeConv, err)
 		return helper.RespondError(c, http.StatusBadRequest, err)
 	}
 
-	name := &entity.Thing{Name: params.Body.Name}
-	err = h.service.CreateThing(ctx, name)
+	// validating the request
+	err = h.validator.Struct(params.Body)
+	if err != nil {
+		apilogger.Error(ctx, apilogger.LogCatInputValidation, err)
+		return helper.RespondError(c, http.StatusBadRequest, ErrDataValidation)
+	}
+
+	// Creating the thing
+	t, _ := time.Parse("2006-01-02", params.Body.Birth_date)
+	thing := &entity.Thing{
+		Name:       params.Body.Name,
+		Email:      params.Body.Email,
+		Birth_date: t,
+		Phone:      params.Body.Phone,
+		Start_day:  params.Body.Start_day}
+
+	err = h.service.CreateThing(ctx, thing)
 
 	if err != nil {
 		apilogger.Error(ctx, apilogger.LogCatServiceOutput, err)
 		return helper.RespondError(c, http.StatusBadRequest, err)
 	}
 
-	return helper.RespondOk(c, name)
+	return helper.RespondOk(c, thing)
 }
